--- a/Cordova schoolHouse app/www/school/script/style.css
+++ b/Cordova schoolHouse app/www/school/script/style.css
@@ -1,4 +1,6 @@
-
+#bugDivFixed {
+    display:none;
+}
 #screen-middle {
     visibility: hidden;
     position: absolute;
@@ -28,11 +30,11 @@
     font-weight: large;
     font-size: x-large;
     src: local('?'),
-	url("../fonts/caf.oft") format("openstyle"),
-	url("../fonts/caf.woff") format("woff"),
-	url("../fonts/caf.eot") format("embedded-opentype"),
-	url("../fonts/caf.ttf") format("truetype"),
-	url("../fonts/caf.svg#caf") format("svg");
+        url("../fonts/caf.oft") format("openstyle"),
+        url("../fonts/caf.woff") format("woff"),
+        url("../fonts/caf.eot") format("embedded-opentype"),
+        url("../fonts/caf.ttf") format("truetype"),
+        url("../fonts/caf.svg#caf") format("svg");
 }
 
 @font-face {
@@ -41,11 +43,11 @@
     font-weight: normal;
     font-size: large;
     src: local('?'),
-	url("../fonts/vag.oft") format("openstyle"),
-	url("../fonts/vag.woff") format("woff"),
-	url("../fonts/vag.eot") format("embedded-opentype"),
-	url("../fonts/vag.ttf") format("truetype"),
-	url("../fonts/vag.svg#vag") format("svg");
+        url("../fonts/vag.oft") format("openstyle"),
+        url("../fonts/vag.woff") format("woff"),
+        url("../fonts/vag.eot") format("embedded-opentype"),
+        url("../fonts/vag.ttf") format("truetype"),
+        url("../fonts/vag.svg#vag") format("svg");
 }
 
 .noSelect {
@@ -65,8 +67,8 @@ body {
 
 #backgroundImg {
     /*background-image:url("../presets/blueMetal.jpg");*/
-    background-image: url("../presets/cloud-snapshot.jpg");
-    background-size: 100% 100%;
+    background-image: url("../presets/PubblyBackground.png");
+    background-size: cover;
     height: 100%;
     width: 100%;
 }
@@ -92,8 +94,9 @@ body {
 #mainC {
     /*background-image: url(../presets/blackMetal.jpg);
     background-color:#99ccff;*/
+    background-color:RGB(34,34,34);
     position: relative;
-    border: 1px solid white;
+    border: 1px solid RGB(34,34,34);
     border-radius: 10px;
     overflow: hidden;
 }
@@ -135,6 +138,40 @@ body {
     margin-right: 7px;
     background-color: black;
     display: none;
+}
+
+
+#closeC {
+    display:none; /* Never liked it anyway */
+}
+#closeC div {
+    text-align: right;
+    position:absolute;
+    color:green;
+    margin-top:-35px;
+    margin-right:15px;
+    height: 26px;
+    width: 26px;
+    background-color:RGBA(60,60,60,0);
+    border-radius:20px;
+    border:2px solid RGBA(120,120,120,0);
+    right:0;
+    transition:0.5s;
+}
+#closeC div:hover {
+    background-color:RGBA(60,60,60,1);
+    border-color:RGBA(120,120,120,1);
+    cursor:pointer;
+}
+#closeC div span {
+    text-align:center;
+    width: 27px;
+    height:18px;
+    display: block;
+    margin-top:4px;
+    color:#8768AE;
+    font-family: sans-serif;
+    font-weight: bold;
 }
 
 #textC {
@@ -1071,4 +1108,51 @@ body {
     /*
     For mobile, or maybe just cordova, it cannot be 0 height. Must be actual existing thing, or else the char set is all screwed up.
     */
+}
+
+
+#audioRecorderCont {
+    display:none;
+    opacity:0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: RGBA(20,20,20,0.1);
+    z-index:5;
+    transition:0.5s;
+}
+#controls {
+
+}
+#record {
+    /*
+    height:70px;
+    width:70px;
+    position:absolute;
+    top:calc(50% - 35px);
+    left:calc(50% - 35px);
+    border-radius:35px;
+    background-color:green;
+    transition:0.5s;
+    */
+}
+#record.recording {
+    /*
+    background-color:red;
+    width:140px;
+    height:140px;
+    top:calc(50% - 70px);
+    left:calc(50% - 70px);
+    border-radius:70px;
+    */
+}
+#recorderPlaybackDiv {
+    display:none;
+}
+#save {
+    display:none;
+    margin-top:50px;
+    text-align:center;
 }
